# yoimiya3.0

./: memory.db-shm  memory.db-wal  notes  package-lock.json  package.json
backend/: .env  .gitignore  collection.py  gemini.py  memory.db-shm  memory.db-wal  pycair.py  pyproject.toml  server.py  simple.py  test.py  testing.ipynb
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Chatinterface.jsx  Component.jsx  Exp.jsx  Ui.jsx  Waifu.jsx  socket.jsx
test/: legacy.jsx  legeacy.py
